src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test____U1.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "&result"
---
error: __U1 can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE __U1 : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^ __U1 can not be used as a name because it is a built-in datatype

error: __U1: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE __U1 : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^ __U1: Ambiguous datatype.


